Fixes button alignment issues for the moment.
I need to look into including svg glyphs insead of using icon font. Might help with positioning, etc.

--- a/im_ui.css
+++ b/im_ui.css
@@ -281,7 +281,7 @@ body > div
 
 #queueMenu
 {
-  min-height: 25px;
+  height: 38px;
   width: 100%;
   text-align: center;
   padding: 0;
@@ -294,12 +294,12 @@ body > div
 {
   display: inline-block;
   position: relative;
-  width: 35px;
+  width: 38px;
+  height: 38px;
   cursor: pointer;
   font-family: IconicFill;
   font-size: 24pt;
-  padding: 0 4px 8px 4px;
-  margin: px;
+  margin: 2px;
   margin-top: 0;
   margin-bottom: 0;
   background-color: #9a5515;
@@ -307,24 +307,34 @@ body > div
 }
 .queueMenuButton:hover
 {
-  
+}
+.queueMenuButton div
+{
+	display: table-cell;
+	vertical-align: middle;
+	position: relative;
+	padding-top: 3px;
+	width: 38px;
+	margin: 0 auto;
 }
 
 .queueItemButton
 {
-  display: inline-block;
+  display: table-cell;
+  vertical-align: middle;
   position: relative;
+  text-align: center;
   float: left;
   cursor: pointer;
   font-family: IconicFill;
   font-size: 16pt;
-
+  width: 29px;
+  height: 25px;
   padding: 0;
-  padding-right: 7px;
-  padding-bottom: 7px;
-  padding-left: 7px;
+  padding-top: 5px;
+  padding-right: 1px;
   margin: 0;
-  margin-top: 7px;
+  margin-top: 5px;
   margin-right: 3px;
   background-color: orange;
   pointer-events: auto;
